--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-15  Abel Cheung  <abelcheung@gmail.com>
 
+	* class.mup.inc.php, class.scorerender.inc.php:
+	Change density from 110 to 90.
+
+2007-02-15  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php: Turn on transparency and turn off
 	"show input source" option by default.
 
