--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-02-17  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	Drop latex support. Now read and write configuration
+	option as an array instead of 20+ independent values.
+	Simpler(?) regex for tag matching.
+
+	* class.*.php:
+	Relevant variable changes.
+	Copyright notices.
+
 2007-02-16  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.*.inc.php: Rename parent class function name.
