--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-21  Abel Cheung  <abelcheung@gmail.com>
 
+	* class.guido.inc.php:
+	Fix small typo that prevent guido support from working.
+
+2007-02-21  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php:
 	Really filters content/comment through guido_filter().
 
