--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-06  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	Also apply filter to title and excerpt.
+
 2007-03-02  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
