--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-10  Abel Cheung  <abelcheung@gmail.com>
+
+	* README.txt:
+	Update.
+
 2007-03-06  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
