--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-13  Abel Cheung  <abelcheung@gmail.com>
+
+	* TODO.txt: Add TODO.
+
 2007-03-11  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
