--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+=== ScoreRender 0.1.1 ===
+
 2007-03-14  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.lilypond.inc.php, class.scorerender.inc.php:
