--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-09  Abel Cheung  <abelcheung@gmail.com>
+
+	* showcode.php, wp-scorerender.php: Fix for popup window showing
+	plus sign as space.
+
 2007-05-08  Abel Cheung  <abelcheung@gmail.com>
 
 	* showcode.php, showcode.css: Use CSS.
