--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+=== ScoreRender 0.1.3 ===
+
+2007-05-17  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php: Add nonce protection.
+
 === ScoreRender 0.1.2 ===
 
 2007-03-30  Abel Cheung  <abelcheung@gmail.com>
