--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-31  Abel Cheung  <abelcheung@gmail.com>
+
+	* showcode.php: Add support for cut and paste on mozilla/firefox
+	browsers.
+
 2007-05-30  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
