--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
 2007-06-07  Abel Cheung  <abelcheung@gmail.com>
 
+	* class.*.inc.php:
+	- Drop unneeded input variable in getInputFileContents() and class
+	initialization method.
+
+	* class.scorerender.inc.php, wp-scorerender.php:
+	- Add new error constant.
+
+	* class.scorerender.inc.php (setMusicFragment, getMusicFragment):
+	- New method.
+
+	* wp-scorerender.php (scorerender_process_content):
+	- Drop unneeded input variable.
+
+2007-06-07  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php: Set start/end tag, regex etc as static variable
 	instead of computed on the fly.
 
