--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-10  Abel Cheung  <abelcheung@gmail.com>
+
+	* showcode.php, wp-scorerender.php:
+	- Load text domain properly.
+
 2007-06-08  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
