--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-26  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- Configuration form tweaking, look and feel more consistent with WP
+	  2.5 admin form now.
+
 2008-08-22  Abel Cheung  <abelcheung@gmail.com>
 
 	* class.scorerender.inc.php (convertimg):
