--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-08-26  Abel Cheung  <abelcheung@gmail.com>
 
+	* showcode.php: Better wording about copy and paste error.
+	* wp-scorerender.php: Fix typo.
+
+2008-08-26  Abel Cheung  <abelcheung@gmail.com>
+
 	* wp-scorerender.php:
 	- Configuration form tweaking, look and feel more consistent with WP
 	  2.5 admin form now.
