--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== ScoreRender 0.2.1 ===
+2008-09-18  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- (scorerender_update_options) Backport fix: IE transparency warning option
+	  can't be turned off once it is turned on.
+
 === ScoreRender 0.2.0 ===
 2008-08-26  Abel Cheung  <abelcheung@gmail.com>
 
