--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-21  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php, scorerender-admin.php:
+	- Move WP admin related functions to scorerender-admin.php
+
 2008-09-20  Abel Cheung  <abelcheung@gmail.com>
 
 	* notation/mup.php:
