--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-30  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- No need to use DIRECTORY_SEPARATOR.
+
 2009-04-08  Abel Cheung  <abelcheung@gmail.com>
 
 	* scorerender-admin.php:
