--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-09  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php (scorerender_process_content):
+	- Also show image dimension in output image tag.
+
 2009-05-07  Abel Cheung  <abelcheung@gmail.com>
 
 	* scorerender*.php:
