notation was not deactivated even when corresponding notation program was unset

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2010-02-23  Abel Cheung  <abelcheung@gmail.com>
 
+	* wp-scorerender.php:
+	- (scorerender_conversion_hook) notation was not deactivated even when
+	  corresponding notation program was unset.
+	  
+2010-02-23  Abel Cheung  <abelcheung@gmail.com>
+
 	* scorerender-admin.php:
 	- (cache_location_match) Removed, not used anymore.
 
